--- a/social_network/src/App.css
+++ b/social_network/src/App.css
@@ -11,21 +11,13 @@
 
 }
 
-.header{
-  grid-area: h;
-  background-color: green;
-}
-
-.header img{
-  width: 20px;
-}
-
-.nav{
-  grid-area: n;
-  background-color: greenyellow;
-}
-
-.content{
+.app-wrapper-content{
   grid-area: c;
   background-color:lightskyblue ;
 }
+
+
+
+
+
+
