--- a/social_network/src/components/Nav/Nav.css
+++ b/social_network/src/components/Nav/Nav.css
@@ -14,7 +14,7 @@
     font-size: 14px;
   } 
   
-  .nav div:hover a{
+  .nav div:hover a,.nav a.active{
     
     color: rgba(126, 206, 252, 0.8);; 
       
@@ -22,5 +22,5 @@
   
   .nav div:hover{  
     border-left: 2px solid #7ecefc; 
-    
+    padding-left: 8px;    
   }
